Blender 2.70 crash when increasing hair emission number #39078

Closed
opened 2014-03-10 01:22:07 +01:00 by Ed · 8 comments

System Information
MacBook Pro OSX Mavericks

Blender Version
2.70

Modifying hair emission number to a value of 800 or greater causes crash.

Exact steps for others to reproduce the error

  1. Open attached blend.
  2. Select the Sphere object, and switch to Particles panel.
  3. Change Emission Number 800 or 1000 (seems to be anything over 800 on my machine).
    These steps crash every time on my machine.

NOTE: This may be related to the same bug already reported under #38994.

Bird_Nests_V2_-_20140310.blend

**System Information** MacBook Pro OSX Mavericks **Blender Version** 2.70 Modifying hair emission number to a value of 800 or greater causes crash. **Exact steps for others to reproduce the error** 1. Open attached blend. 2. Select the Sphere object, and switch to Particles panel. 3. Change Emission Number 800 or 1000 (seems to be anything over 800 on my machine). These steps crash every time on my machine. NOTE: This may be related to the same bug already reported under #38994. [Bird_Nests_V2_-_20140310.blend](https://archive.blender.org/developer/F80489/Bird_Nests_V2_-_20140310.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @elkid

Added subscriber: @elkid

Added subscriber: @ideasman42

Added subscriber: @ideasman42
possible fix: [0001-Fix-#39078-crash-when-increasing-hair-emission-numbe.patch](https://archive.blender.org/developer/F80642/0001-Fix-#39078-crash-when-increasing-hair-emission-numbe.patch)

This issue was referenced by blender/blender-addons-contrib@500088d9e3

This issue was referenced by blender/blender-addons-contrib@500088d9e34439a936d8060e4b0026508d046879

This issue was referenced by 500088d9e3

This issue was referenced by 500088d9e34439a936d8060e4b0026508d046879

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 500088d9e3.

Closed by commit 500088d9e3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39078
No description provided.