Fix T39078: crash increasing hair emission number